--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,34 @@ Footer
 © 2022 GitHub, Inc.
 Footer navigation
 Terms
+
+
+# Codelite ignores
+*.mk
+*.project
+*.workspace
+compile_commands.json
+Makefile
+# generated directories
+.codelite/
+
+*.session
+*.tags
+
+# Rider
+# Rider auto-generates .iml files, and contentModel.xml
+**/.idea/**/*.iml
+**/.idea/**/contentModel.xml
+**/.idea/**/modules.xml
+
+*.suo
+*.user
+.vs/
+[Bb]in/
+[Oo]bj/
+_UpgradeReport_Files/
+[Pp]ackages/
+
+Thumbs.db
+Desktop.ini
+.DS_Store
