First batch of cpp content up to now

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,10 @@ Makefile
 *.session
 *.tags
 
+*.clangd
+*.clang-format
+**/.ctagsd/ 
+
 # Rider
 # Rider auto-generates .iml files, and contentModel.xml
 **/.idea/**/*.iml
